--- a/expressJS/nodekb/package.json
+++ b/expressJS/nodekb/package.json
@@ -4,8 +4,12 @@
   "description": "Simple knowledgebase app",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "_comment": "Start the application using npm start",
+    "start": "node app"
   },
   "author": "Nimesh Silva",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
