--- a/expressJS/nodekb/package.json
+++ b/expressJS/nodekb/package.json
@@ -10,6 +10,7 @@
   "author": "Nimesh Silva",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
     "express": "^4.17.1",
@@ -17,6 +18,8 @@
     "express-session": "^1.17.0",
     "express-validator": "^5.3.1",
     "mongoose": "^5.9.5",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "pug": "^2.0.4",
     "request": "^2.88.2"
   }
