--- a/TypeScript-Projects/first-project/tsconfig.json
+++ b/TypeScript-Projects/first-project/tsconfig.json
@@ -2,9 +2,13 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es5",
-    "sourceMap": true
+    "sourceMap": true,
+    "outDir": "build"
   },
   "exclude": [
     "node_modules"
+  ],
+  "include": [
+    "src/scripts/**/*"
   ]
 }
