--- a/TypeScript-Projects/typescript-react/tsconfig.json
+++ b/TypeScript-Projects/typescript-react/tsconfig.json
@@ -1,14 +1,11 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "target": "es5",
+    "target": "es6",
     "sourceMap": true,
-    "outDir": "build"
+    "jsx": "react"
   },
   "exclude": [
     "node_modules"
-  ],
-  "include": [
-    "src/scripts/**/*"
   ]
 }
