--- a/TypeScript-Projects/typescript-react/package.json
+++ b/TypeScript-Projects/typescript-react/package.json
@@ -1,13 +1,16 @@
 {
   "name": "typescript-react",
   "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@types/react": "^16.9.35",
-    "@types/react-dom": "^16.9.8",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
-  },
-  "scripts": {
-    "magic": "webpack"
   }
 }
