--- a/TypeScript-Projects/typescript-react/package.json
+++ b/TypeScript-Projects/typescript-react/package.json
@@ -12,5 +12,11 @@
   "dependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
+  },
+  "devDependencies": {
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
+    "parcel-bundler": "^1.12.4",
+    "typescript": "^3.9.3"
   }
 }
